test_data/Xml/Unexpected/Unserializable/InvalidClassName/range/wrong.xml.exception
Expected an element representing an instance of class Range with element name range, but got: utterlyInvalid at: the beginning